bubba-backend (2.2.17) vincent hugo; urgency=low

  * convert target ftp to lowercase

 -- Carl Fürstenberg <carl@excito.com>  Mon, 23 May 2011 17:07:46 +0200

bubba-backend (2.2.16) vincent hugo; urgency=low

  * backup password environment fixes

 -- Carl Fürstenberg <carl@excito.com>  Mon, 23 May 2011 16:35:45 +0200

bubba-backend (2.2.13) vincent hugo; urgency=low

  * Adding check in dhclient exit hook for samba to not restart if IP hasn't
    changed (Closes: 1651) 

 -- Carl Fürstenberg <carl@excito.com>  Tue, 12 Apr 2011 13:43:01 +0200

bubba-backend (2.2.12) vincent hugo; urgency=low

  * adding igd functionallity 

 -- Carl Fürstenberg <carl@excito.com>  Fri, 08 Apr 2011 17:11:49 +0200

bubba-backend (2.2.11) vincent hugo; urgency=low

  * Fix Bubba|2/Bubba|Two to B3 strings 

 -- Carl Fürstenberg <carl@excito.com>  Thu, 31 Mar 2011 11:37:40 +0200

bubba-backend (2.2.10) vincent hugo; urgency=low

  * Specify permissions for afd shares

 -- Carl Fürstenberg <carl@excito.com>  Wed, 30 Mar 2011 16:09:26 +0200

bubba-backend (2.2.9) vincent hugo; urgency=low

  * Stop mediatomb on update if relevant
  * fix depends for Config::Simple

 -- Carl Fürstenberg <carl@excito.com>  Wed, 30 Mar 2011 13:20:36 +0200

bubba-backend (2.2.7) vincent hugo; urgency=low

  * Switch mediatomb to minidlna 

 -- Carl Fürstenberg <carl@excito.com>  Wed, 30 Mar 2011 12:16:58 +0200

bubba-backend (2.2.6) vincent hugo; urgency=low

  * Update WEP and WPA default password to ExcitoSweden!

 -- Carl Fürstenberg <carl@excito.com>  Tue, 22 Mar 2011 15:05:24 +0100

bubba-backend (2.2.5) vincent hugo; urgency=low

  * Reenable apt preferences again, with right origin on 
    upstream

 -- Tor Krill <tor@excito.com>  Thu, 11 Nov 2010 09:36:09 +0100

bubba-backend (2.2.4) vincent hugo; urgency=low

  * Fix severity level on notification to let it show in UI
  * Change change_distribution to not modify apt preferences 

 -- Tor Krill <tor@excito.com>  Tue, 02 Nov 2010 11:19:50 +0100
