@@ -65,6 +65,15 @@ Depends: ${misc:Depends}, bubba,
  bubba-networkmanager,
  libtry-tiny-perl,
  libbubba-info-perl,
- uuid-runtime
+ uuid-runtime,
+ python-dbus,
+ system-config-printer-udev,
+ hpijs-ppds,
+ hplip,
+ foomatic-db-compressed-ppds,
+ openprinting-ppds,
+ foo2zjs,
+ hp-ppd,
+ splix
 Description: The backend of the bubba administration
  The backend consists of scripts required for the bubba to function.
